--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_NAME=test
-DB_USERNAME=
-DB_PASSWORD=
-DB_HOST=127.0.0.1
+DB_NAME=express-mongo-socket
+DB_USERNAME=kovt99
+DB_PASSWORD=admin
+DB_HOST=luke.913pggu.mongodb.net
 DB_PORT=27017
+
+URL=http://localhost:3000
+
+MONGO_URL=mongodb://localhost:27017/
+# MONGO_URL=mongodb+srv://kovt99:admin@luke.913pggu.mongodb.net/
